<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_all_reports"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_relatos" />
    <item
        android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/nav_mapa" />
    <item
        android:id="@+id/nav_my_reports"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_meus_relatos" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/nav_notificacoes" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_perfil" />
</menu>
